Moved SVG path to prevent whitespace at the bottom

--- a/assets/css/reset.sass
+++ b/assets/css/reset.sass
@@ -47,3 +47,8 @@ body
 
 img
   max-width: 100%
+
+.clip-svg
+  width: 0
+  height: 0
+  line-height: 0
